@@ -21,6 +21,9 @@ export(flextable)
 export(fontsize)
 export(height)
 export(height_all)
+export(hline)
+export(hline_bottom)
+export(hline_top)
 export(htmltools_value)
 export(hyperlink_text)
 export(italic)
@@ -45,6 +48,9 @@ export(theme_tron)
 export(theme_tron_legacy)
 export(theme_vanilla)
 export(theme_zebra)
+export(vline)
+export(vline_left)
+export(vline_right)
 export(void)
 export(width)
 export(xtable_to_flextable)
